OH/snapshot(1483)- Video Logic remove container

--- a/libs/assessment/assessment-create/src/lib/assessment-create.component.html
+++ b/libs/assessment/assessment-create/src/lib/assessment-create.component.html
@@ -90,6 +90,7 @@
                     <p class='text-muted mb-2'>Video</p>
                     <div class='d-flex align-items-center'>
                       <hidden-innovation-common-form-field-video
+                        (emitRemoveVideo)='removeMediaCtrlAndValidate(assessmentGroup.controls.videoId)'
                         (emitVideoCtrlData)='assessmentGroup.controls.videoId?.setValue($event)'
                         [parentCtrl]='assessmentGroup.controls.videoId'
                         [videoData]='selectedAssessment?.video'
