OH/snapshot(1483) - Button Text for category video add

--- a/libs/assessment/assessment-create/src/lib/assessment-create.component.html
+++ b/libs/assessment/assessment-create/src/lib/assessment-create.component.html
@@ -72,6 +72,14 @@
                     ></hidden-innovation-common-form-field-number>
                   </div>
                 </div>
+                <div class='row mb-2'>
+                  <div class='col-12'>
+                    <hidden-innovation-common-form-field
+                      [label]='constantDataService.FIELD_NAME.CATEGORY_OVERVIEW_TEXT | titlecase'
+                      controlPath='category_overview_text'
+                    ></hidden-innovation-common-form-field>
+                  </div>
+                </div>
                 <div class='row mb-3'>
                   <div class='col-12'>
                     <p class='text-muted mb-2'>Poster</p>
