--- a/libs/featured/featured-listing/src/lib/featured-listing.component.html
+++ b/libs/featured/featured-listing/src/lib/featured-listing.component.html
@@ -37,12 +37,12 @@
                     <th mat-header-cell *matHeaderCellDef
                         [width]='100'>{{constantDataService.FIELD_NAME.ACTION | titlecase}}</th>
                     <td mat-cell *matCellDef='let row'>
-<!--                              <button [disabled]='!row.id' mat-icon-button color='primary' class='my-2' [routerLink]="['/featured','edit', row.id]" >-->
-<!--                                <mat-icon style='font-size: 16px'>create</mat-icon>-->
-<!--                              </button>-->
-                      <button  mat-icon-button color='primary' class='my-2' [routerLink]="['/featured','edit', row.id]" >
-                        <mat-icon style='font-size: 16px'>create</mat-icon>
-                      </button>
+                              <button [disabled]='!row.id' mat-icon-button color='primary' class='my-2' [routerLink]="['/featured','edit', row.id]" >
+                                <mat-icon style='font-size: 16px'>create</mat-icon>
+                              </button>
+<!--                      <button  mat-icon-button color='primary' class='my-2' [routerLink]="['/featured','edit', row.id]" >-->
+<!--                        <mat-icon style='font-size: 16px'>create</mat-icon>-->
+<!--                      </button>-->
                     </td>
                   </ng-container>
 
