OH/Goals: Goal order set

--- a/libs/goals/create-goals/src/lib/create-goals.component.html
+++ b/libs/goals/create-goals/src/lib/create-goals.component.html
@@ -99,7 +99,9 @@
                 </mat-checkbox>
               </div>
             </div>
-            <div *ngFor='let ans of answersCtrl.controls; let i=index' class='row mb-2'>
+            <div (cdkDropListDropped)='goalsDrag($event)' cdkDropList>
+            <div *ngFor='let ans of answersCtrl.controls; let i=index' class='row mb-2' cdkDrag >
+              {{ans.value | json}}
               <div class='col-12' [formGroup]='answerFormGroup(i)'>
                 <mat-card class='mat-elevation-z1'>
                   <div class='answersGrid'>
@@ -119,6 +121,7 @@
                   </div>
                 </mat-card>
               </div>
+            </div>
             </div>
           </div>
         </mat-card>
