OH/goals: delete

--- a/libs/goals/create-goals/src/lib/create-goals.component.html
+++ b/libs/goals/create-goals/src/lib/create-goals.component.html
@@ -109,7 +109,7 @@
                       label='Answer '
                     ></hidden-innovation-common-form-field>
                     <div>
-                      <button color='warn' mat-icon-button type='button' (click)='removeAnswer(i)' *ngIf='false'>
+                      <button color='warn' mat-icon-button type='button' (click)='removeAnswer(i)' >
                         <mat-icon>delete</mat-icon>
                       </button>
                     </div>
