--- a/libs/featured/create-featured/src/lib/create-featured.component.html
+++ b/libs/featured/create-featured/src/lib/create-featured.component.html
@@ -198,27 +198,31 @@
             </div>
             <div (cdkDropListDropped)='testDragEvent($event)' *ngSwitchCase='featuredType.FEATURED_TESTS'
                  cdkDropList>
-              <ng-template [ngIfElse]='elseExists' [ngIf]='uiStore.testsExists$ | async'>
-                <hidden-innovation-pack-content-card
-                  (emitDeleteEvent)='uiStore.deleteContentPrompt(packContentTypeEnum.SINGLE, content.id)'
-                  *ngFor='let content of (uiStore.selectedTests$ | async); index as i; first as isFirst; last as isLast'
-                  [category]='packContentTypeEnum.SINGLE'
-                  [name]='content.name'
-                  [ngClass]='{"mt-3" : isFirst, "mb-0": isLast }'
-                  cdkDrag
-                  class='mb-2'
-                ></hidden-innovation-pack-content-card>
+              <ng-template [ngIfElse]='elseExists'
+                           [ngIf]='(uiStore.testsExists$ | async) || (uiStore.testGroupsExists$ | async)'>
+                <div>
+                  <hidden-innovation-pack-content-card
+                    (emitDeleteEvent)='uiStore.deleteContentPrompt(packContentTypeEnum.SINGLE, content.id)'
+                    *ngFor='let content of (uiStore.selectedTests$ | async); index as i; first as isFirst; last as isLast'
+                    [category]='packContentTypeEnum.SINGLE'
+                    [name]='content.name'
+                    [ngClass]='{"mt-3" : isFirst, "mb-0": isLast }'
+                    cdkDrag
+                    class='mb-2'
+                  ></hidden-innovation-pack-content-card>
+                </div>
+                <div>
+                  <hidden-innovation-pack-content-card
+                    (emitDeleteEvent)='uiStore.deleteContentPrompt(packContentTypeEnum.GROUP, content.id)'
+                    *ngFor='let content of (uiStore.selectedTestGroups$ | async); index as i; first as isFirst; last as isLast'
+                    [category]='packContentTypeEnum.GROUP'
+                    [name]='content.name'
+                    [ngClass]='{"mt-3" : isFirst, "mb-0": isLast }'
+                    class='mb-2'
+                  ></hidden-innovation-pack-content-card>
+                </div>
               </ng-template>
-              <ng-template [ngIfElse]='elseExists' [ngIf]='uiStore.testGroupsExists$ | async'>
-                <hidden-innovation-pack-content-card
-                  (emitDeleteEvent)='uiStore.deleteContentPrompt(packContentTypeEnum.GROUP, content.id)'
-                  *ngFor='let content of (uiStore.selectedTestGroups$ | async); index as i; first as isFirst; last as isLast'
-                  [category]='packContentTypeEnum.GROUP'
-                  [name]='content.name'
-                  [ngClass]='{"mt-3" : isFirst, "mb-0": isLast }'
-                  class='mb-2'
-                ></hidden-innovation-pack-content-card>
-              </ng-template>
+
             </div>
             <div (cdkDropListDropped)='packDragEvent($event)' *ngSwitchCase='featuredType.PACKS' cdkDropList>
               <ng-template [ngIfElse]='elseExists' [ngIf]='uiStore.packsExists$ | async'>
