--- a/libs/goals/create-goals/src/lib/create-goals.component.html
+++ b/libs/goals/create-goals/src/lib/create-goals.component.html
@@ -99,29 +99,32 @@
                 </mat-checkbox>
               </div>
             </div>
-            <div (cdkDropListDropped)='goalsDrag($event)' cdkDropList>
-            <div *ngFor='let ans of answersCtrl.controls; let i=index' class='row mb-2' cdkDrag >
-              <div class='col-12' [formGroup]='answerFormGroup(i)'>
-                <mat-card class='mat-elevation-z1'>
-                  <div class='answersGrid'>
-                    <hidden-innovation-common-form-field
-                      controlPath='answerString'
-                      label='Answer '
-                    ></hidden-innovation-common-form-field>
-                    <div>
-                      <button color='warn' mat-icon-button type='button' (click)='removeAnswer(i)' >
-                        <mat-icon>delete</mat-icon>
-                      </button>
+              <div cdk-scrollable style="height:100vh; overflow-y:scroll; overflow-x: hidden">
+                <div (cdkDropListDropped)='goalsDrag($event)' cdkDropList>
+                  <div *ngFor='let ans of answersCtrl.controls; let i=index' class='row mb-2' cdkDrag>
+                    <div class='col-12' [formGroup]='answerFormGroup(i)'>
+                      <mat-card class='mat-elevation-z1'>
+                        <div class='answersGrid'>
+                          <hidden-innovation-common-form-field
+                            controlPath='answerString'
+                            label='Answer '
+                          ></hidden-innovation-common-form-field>
+                          <div>
+                            <button color='warn' mat-icon-button type='button' (click)='removeAnswer(i)'>
+                              <mat-icon>delete</mat-icon>
+                            </button>
+                          </div>
+                          <hidden-innovation-common-form-field
+                            label='Font Awesome Icon 6 Code'
+                            controlPath='iconName'
+                          ></hidden-innovation-common-form-field>
+                        </div>
+                      </mat-card>
                     </div>
-                    <hidden-innovation-common-form-field
-                      label='Font Awesome Icon 6 Code'
-                      controlPath='iconName'
-                    ></hidden-innovation-common-form-field>
                   </div>
-                </mat-card>
+                </div>
+
               </div>
-            </div>
-            </div>
           </div>
         </mat-card>
       </div>
