--- a/libs/sports-activities/create-sports-activities/src/lib/create-sports-activities.component.html
+++ b/libs/sports-activities/create-sports-activities/src/lib/create-sports-activities.component.html
@@ -32,7 +32,7 @@
                 <div class='col-12'>
                   <hidden-innovation-common-form-field
                     controlPath='header'
-                    label='Goal Header'
+                    label='Sports Activities Header'
                   ></hidden-innovation-common-form-field>
                 </div>
               </div>
