feat(sports-activities) - screen UI ready

--- a/libs/sports-activities/create-sports-activities/src/lib/create-sports-activities.component.html
+++ b/libs/sports-activities/create-sports-activities/src/lib/create-sports-activities.component.html
@@ -16,7 +16,7 @@
       </div>
     </div>
   </div>
-  <div  class='container-fluid p-0'>
+  <div  class='container-fluid p-0' [formGroup]='sportsActivitiesGroup'>
     <div class='row'>
       <div class='col-lg-6 col-12'>
         <mat-card>
