bug-fix(test-group) - Urls

--- a/libs/test-group/test-group-create/src/lib/test-group-create.component.html
+++ b/libs/test-group/test-group-create/src/lib/test-group-create.component.html
@@ -85,7 +85,7 @@
             <div class='row mb-2'>
               <div class='col-12'>
                 <hidden-innovation-common-form-field
-                  controlPath='textGroupOverview'
+                  controlPath='overviewText'
                   label='Test Group Overview Text'
                 ></hidden-innovation-common-form-field>
               </div>
