feat(user-insights) - Sports and activities validtion applied on minimum one answer

--- a/libs/goals/create-goals/src/lib/create-goals.component.html
+++ b/libs/goals/create-goals/src/lib/create-goals.component.html
@@ -124,9 +124,9 @@
 
                 </div>
               </div>
-              <ng-container *ngIf='(answersCtrl.errors?.maxLength) '>
+              <ng-container *ngIf='(answersCtrl.errors?.minLength) '>
                 <mat-error>
-                  {{answersCtrl.errors?.maxLength?.message}}
+                  {{answersCtrl.errors?.minLength?.message}}
                 </mat-error>
               </ng-container>
             </div>
