--- a/libs/sports-activities/create-sports-activities/src/lib/create-sports-activities.component.html
+++ b/libs/sports-activities/create-sports-activities/src/lib/create-sports-activities.component.html
@@ -124,9 +124,9 @@
 
                 </div>
               </div>
-              <ng-container *ngIf='(answersCtrl.errors?.maxLength) '>
+              <ng-container *ngIf='(answersCtrl.errors?.minLength) '>
                 <mat-error>
-                  {{answersCtrl.errors?.maxLength?.message}}
+                  {{answersCtrl.errors?.minLength?.message}}
                 </mat-error>
               </ng-container>
             </div>
