--- a/libs/sports-activities/create-sports-activities/src/lib/create-sports-activities.component.html
+++ b/libs/sports-activities/create-sports-activities/src/lib/create-sports-activities.component.html
@@ -82,7 +82,7 @@
       <div class='col-lg-6 col-12'>
         <mat-card>
           <mat-card-title class='d-flex justify-content-between align-items-center'>
-            <h3 class='mat-h3 mb-0 font-sf-pro'>Goals</h3>
+            <h3 class='mat-h3 mb-0 font-sf-pro'>Sports and Activities</h3>
             <button
               (click)='addNewAnswer()'
               class='ml-3'
@@ -124,9 +124,9 @@
 
                 </div>
               </div>
-              <ng-container *ngIf='(answersCtrl.errors?.minLength) '>
+              <ng-container *ngIf='(answersCtrl.value.length < 3) '>
                 <mat-error>
-                  {{answersCtrl.errors?.minLength?.message}}
+                  {{'Minimum 3  answers required'}}
                 </mat-error>
               </ng-container>
             </div>
