feat(goals): validation on delete

--- a/libs/goals/create-goals/src/lib/create-goals.component.html
+++ b/libs/goals/create-goals/src/lib/create-goals.component.html
@@ -9,6 +9,7 @@
           Cancel
         </button>
         <button
+          [disabled]='answersCtrl.value.length < 3'
           class='ml-3'
           color='primary' mat-flat-button type='submit' (click)='submit()'>
           Save
